--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,17 +28,7 @@ jobs:
 
     - name: Build with Nuitka
       run: |
-        python -m nuitka main.py \
-          --onefile \
-          --standalone \
-          --enable-plugin=pyqt6 \
-          --windows-icon-from-ico=icon.ico \
-          --windows-console-mode=disable \
-          --include-data-files=icon.ico=icon.ico \
-          --include-data-files=button.jpg=button.jpg \
-          --include-data-files=RuneScape-Quill.ttf=RuneScape-Quill.ttf \
-          --include-data-files=icons/*=icons/ \
-          --output-filename=LostKit.exe
+        python -m nuitka main.py --onefile --standalone --enable-plugin=pyqt6 --windows-icon-from-ico=icon.ico --windows-console-mode=disable --include-data-files=icon.ico=icon.ico --include-data-files=button.jpg=button.jpg --include-data-files=RuneScape-Quill.ttf=RuneScape-Quill.ttf --include-data-files=icons/*=icons/ --output-filename=LostKit.exe
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
